Java syntax updates